overlap fixes

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -407,6 +407,73 @@ body .cmb2-postbox .cmb-th + .cmb-td {
   cursor: pointer;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\0000373}}
+.cb2-debug-control {
+  position: relative;
+  float: left;
+  font-size: 10px;
+  color: #777;
+  cursor: pointer;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\0000380}}
+.cb2-debug-control span {
+  position: absolute;
+  top: -3px;
+  left: 40px;
+  z-index: 40;
+  border: 1px dotted #000;
+  background-color: #fff;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\0000388}}
+.cb2-debug-control:before {
+  content: '•';
+  display: inline-block;
+  margin: 0px 2px 0 0px;
+  padding: 0px 2px;
+  min-width: 7px;
+  border-radius: 11px;
+  background-color: #500;
+  color: #fff;
+  font-size: 6px;
+  line-height: 10px;
+  text-align: center;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\00003102}}
+.cb2-debug {
+  background-color: Transparent;
+  font-family: Sans;
+  color: #555;
+  font-size: 10px;
+  padding: 4px;
+  white-space: nowrap;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\00003110}}
+body .cb2-low-debug {
+  color: #777;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\00003113}}
+.cb2-high-debug {
+  font-weight: bold;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\00003116}}
+.cb2-notice {
+  background-color: #fac83f;
+  border: 1px solid #888;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_debug\.scss}line{font-family:\00003120}}
+.cb2-dangerous,
+.cb2-warning,
+.cb2-error {
+  color: red;
+}
+
 /* Debug */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_reflection\.scss}line{font-family:\000031}}
 .cb2-database-table {
@@ -554,11 +621,13 @@ li.cb2-classname {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_popup\.scss}line{font-family:\0000364}}
 #TB_ajaxContent {
-  height: auto !important;
-  width: auto !important;
+  /* TODO: popup sizes?
+   * height:auto!important;
+   * width:auto!important;
+   */
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_popup\.scss}line{font-family:\0000368}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/wordpress\/commons_booking\/wp-content\/plugins\/commons-booking-2\/admin\/assets\/sass\/partials\/_popup\.scss}line{font-family:\0000370}}
 #TB_title {
   background-image: linear-gradient(to right, #d7d7d7, #fff);
 }
